--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,33 @@
+# Application Name
+spring.application.name=product-app
+
+# Server Configuration
+server.port=8080
+server.error.include-message=always
+server.error.include-binding-errors=always
+
+# Database Configuration
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+
+# JPA Configuration
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+
+# H2 Console
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Logging Configuration
+logging.level.root=INFO
+logging.level.com.example.productapp=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+# JWT Configuration (externalized)
+jwt.secret=mySecretKeyForJWTTokenGenerationPleaseChangeInProduction
+jwt.expiration=36000000
