fixed h2 db console issue

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,6 +21,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
 
 # Logging Configuration
 logging.level.root=INFO
